# BachelorProject2026

./: .gitignore  CMakeLists.txt  README.md  coordinate_transform.h  external_ik.h  haply.h  haply_bridge.py  haply_client.h  haply_connect.py  haply_test_setup.py  inverse_kinematics.h  main.cpp  sim_haply.h
python_sim/: drawer_scene.py  drawer_scene_backup.py  empty_scene.py  main.py  nut_pole_scene.py  safety.py  wipe_scene.py
python_sim/tasks/: base_task.py  drawer_task.py  nut_pole_task.py  wipe_task.py
